WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 107220
FrameSelection should use shadowHost instead of shadowAncestorNode
https://bugs.webkit.org/show_bug.cgi?id=107220
Summary
FrameSelection should use shadowHost instead of shadowAncestorNode
Shinya Kawanaka
Reported
2013-01-17 20:52:18 PST
shadowAncestorNode is deprecated, and we want to convert it to shadowHost(). Now FrameSelection uses 2 shadowAncestorNode(), which are easy to convert to shadowHost.
Attachments
Patch
(1.95 KB, patch)
2013-01-17 20:56 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2013-01-17 20:56:29 PST
Created
attachment 183363
[details]
Patch
Kent Tamura
Comment 2
2013-01-21 19:55:58 PST
Comment on
attachment 183363
[details]
Patch looks ok
WebKit Review Bot
Comment 3
2013-01-21 21:05:58 PST
Comment on
attachment 183363
[details]
Patch Clearing flags on attachment: 183363 Committed
r140381
: <
http://trac.webkit.org/changeset/140381
>
WebKit Review Bot
Comment 4
2013-01-21 21:06:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug