FrameSelection should use shadowHost instead of shadowAncestorNode https://bugs.webkit.org/show_bug.cgi?id=107220

Reviewed by Kent Tamura.

shadowAncestorNode() is deprecated and we want to use shadowHost.
Here, all objects calling shadowAncestorNode() is in ShadowDOM, we can safely convert
the call to shadowHost().

No new tests, simple refactoring.

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::selectAll):


git-svn-id: svn://svn.chromium.org/blink/trunk@140381 bbb929c8-8fbe-4397-9dbb-9b2b20218538